--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -47,8 +47,8 @@ tanaka:
   feed_url: http://tanaka.com/index.atom
   company: company_1
   description: "田中です。"
-  graduation: true
   course: course_1
+  graduated_on: "2015-01-01"
   created_at: "2014-01-01 00:00:03"
 
 mineo:
