--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -80,8 +80,8 @@ yameo:
   blog_url: http://yameo.org
   company: company_1
   description: "リタイアしました。"
-  retire: true
   course: course_1
+  retired_on: "2015-01-01"
   created_at: "2014-01-01 00:00:05"
 
 yamada:
