--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,8 +11,13 @@ komagata:
   feed_url: http://docs.komagata.org/index.atom
   company: company_1
   description: "平日１０〜１９時勤務です。"
-  mentor: true
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: local
+  experience: rails
+  how_did_you_know: 自分で作ったので
+  organization: 合同会社フィヨルド
   admin: true
   updated_at: "2014-01-01 00:00:01"
   created_at: "2014-01-01 00:00:01"
@@ -30,8 +35,13 @@ machida:
   feed_url: http://machida.fjord.jp/feed
   company: company_1
   description: "月曜日と木曜日の午前中勤務です。"
-  mentor: true
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: local
+  experience: rails
+  how_did_you_know: 自分で作ったので
+  organization: 合同会社フィヨルド
   admin: true
   updated_at: "2014-01-01 00:00:00"
   created_at: "2014-01-01 00:00:02"
@@ -48,8 +58,14 @@ tanaka:
   blog_url: http://tanaka.com
   feed_url: http://tanaka.com/index.atom
   company: company_1
-  description: "田中です。"
+  description: "田中です。卒業しちゃいました。"
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: local
+  experience: rails
+  how_did_you_know: Googleで「Rails スクール」で検索した結果
+  organization: 株式会社田中
   graduated_on: "2015-01-01"
   created_at: "2014-01-01 00:00:03"
 
@@ -65,7 +81,7 @@ mineo:
   blog_url: http://mineo.com
   feed_url: http://mineo.com/index.atom
   company: company_1
-  description: "峰尾です。"
+  description: "峰尾です。アドバイザーです。"
   adviser: true
   course: course_1
   created_at: "2014-01-01 00:00:04"
@@ -83,6 +99,12 @@ yameo:
   company: company_1
   description: "リタイアしました。"
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: remote
+  experience: ruby
+  how_did_you_know: 知人に聞いて
+  organization: 株式会社ヤメオ
   retired_on: "2015-01-01"
   created_at: "2014-01-01 00:00:05"
 
@@ -98,8 +120,15 @@ yamada:
   blog_url: http://yamada.com
   feed_url: http://yamada.com/index.atom
   company: company_1
-  description: "山田です。"
+  description: "山田です。メンターです。"
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: remote
+  experience: inexperienced
+  how_did_you_know: 知人に聞いて
+  organization: 木村大学
+  mentor: true
   created_at: "2014-01-01 00:00:06"
 
 kimura:
@@ -116,6 +145,12 @@ kimura:
   company: company_1
   description: "木村です。"
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: remote
+  experience: inexperienced
+  how_did_you_know: 知人に聞いて
+  organization: 木村大学
   updated_at: "2014-01-01 00:00:07"
   created_at: "2014-01-01 00:00:07"
 
@@ -133,5 +168,11 @@ hatsuno:
   company: company_1
   description: "初野です。"
   course: course_1
+  job: office_worker
+  os: mac
+  study_place: remote
+  experience: inexperienced
+  how_did_you_know: 友人に聞いて
+  organization: 明治大学
   updated_at: "2014-01-01 00:00:08"
   created_at: "2014-01-01 00:00:08"
