circleciのテスト失敗時にスクリーンショットを残すようにした

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,9 @@ jobs:
       - store_artifacts:
           path: /tmp/test-results
           destination: test-results
+      - store_artifacts:
+          path: /tmp/screenshots
+          destination: screenshots
 
 workflows:
   version: 2
