--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             - v1-dependencies-
 
+      - run: sudo apt-get install -y fonts-ipafont-gothic fonts-ipafont-mincho
+
       - run:
           name: install dependencies
           command: |
