--- a/test/fixtures/learning_times.yml
+++ b/test/fixtures/learning_times.yml
@@ -7,3 +7,13 @@ learning_time_2:
   report: report_1
   started_at: 2018-03-11 10:00:00
   finished_at: 2018-03-11 15:00:00
+
+learning_time_3:
+  report: tanaka
+  started_at: 2018-12-10 10:00:00
+  finished_at: 2018-12-10 15:00:00
+
+learning_time_4:
+  report: tanaka
+  started_at: 2018-12-11 10:00:00
+  finished_at: 2018-12-11 15:00:00
