githubの草を表示するようにした

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,6 +7,7 @@ komagata:
   last_name: Komagata
   twitter_account: komagata
   facebook_url: http://www.facebook.com/komagata1111
+  github_account: komagata
   blog_url: http://komagata.org
   feed_url: http://docs.komagata.org/index.atom
   company: company_1
