--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ yarn-debug.log*
 .yarn-integrity
 
 /*.pdf
+
+storage/
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
