--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,23 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+google:
+  service: GCS
+  keyfile: {
+    type: "service_account",
+    project_id: "interns-185305",
+    private_key_id: <%= Rails.application.credentials.google["private_key_id"] %>,
+    private_key: <%= Rails.application.credentials.google["private_key"] %>,
+    client_email: "bootcamp@interns-185305.iam.gserviceaccount.com",
+    client_id: "104129663158385951711",
+    auth_uri: "https://accounts.google.com/o/oauth2/auth",
+    token_uri: "https://oauth2.googleapis.com/token",
+    auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs",
+    client_x509_cert_url: "https://www.googleapis.com/robot/v1/metadata/x509/bootcamp%40interns-185305.iam.gserviceaccount.com"
+  }
+  project: "interns-185305"
+  bucket: "256interns"
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
