--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -199,4 +199,28 @@ hajime:
   how_did_you_know: 友人に聞いて
   organization: 始大学
   updated_at: "2014-01-01 00:00:09"
-  created_at: "2014-01-01 00:00:09" 
+  created_at: "2014-01-01 00:00:09"
+
+muryou:
+  login_name: muryou
+  email: muryou@fjord.jp
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK. # testtest
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: Nosuke
+  last_name: Muryou
+  twitter_account: muryou
+  facebook_url: http://www.facebook.com/muryou
+  blog_url: http://muryou.org
+  feed_url: http://muryou.org/index.atom
+  company: company_1
+  description: "無料の助です。趣味は野良犬剣法です。"
+  course: course_1
+  job: office_worker
+  os: mac
+  study_place: remote
+  experience: inexperienced
+  how_did_you_know: 友人に聞いて
+  organization: 無料大学
+  free: true
+  updated_at: "2014-01-01 00:00:10"
+  created_at: "2014-01-01 00:00:10"
