--- a/test/fixtures/announcements.yml
+++ b/test/fixtures/announcements.yml
@@ -9,3 +9,9 @@ announcement_2:
   title: お知らせ2
   description: お知らせ本文2
   created_at: "2018-01-02"
+
+announcement_3:
+  user: machida
+  title: テストのお知らせ
+  description: テストのお知らせ本文
+  created_at: "2018-01-03"
