--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
 
       - run: sudo apt-get install -y fonts-ipafont-gothic fonts-ipafont-mincho
 
+      - run: gem install bundler
+
       - run:
           name: install dependencies
           command: |
