--- a/test/fixtures/learning_times.yml
+++ b/test/fixtures/learning_times.yml
@@ -9,11 +9,11 @@ learning_time_2:
   finished_at: 2018-03-11 15:00:00
 
 learning_time_3:
-  report: tanaka
+  report: sotugyou
   started_at: 2018-12-10 10:00:00
   finished_at: 2018-12-10 15:00:00
 
 learning_time_4:
-  report: tanaka
+  report: sotugyou
   started_at: 2018-12-11 10:00:00
   finished_at: 2018-12-11 15:00:00
