--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -1,6 +1,6 @@
 notification_commented:
   kind: 0
-  user: tanaka
+  user: sotugyou
   sender: komagata
   message: komagataさんからコメントが届きました。
   path: "/reports/5"
@@ -8,7 +8,7 @@ notification_commented:
 
 notification_checked:
   kind: 1
-  user: tanaka
+  user: sotugyou
   sender: machida
   message: machidaさんが学習週1日目を確認しました。
   path: "/reports/5"
@@ -16,7 +16,7 @@ notification_checked:
 
 notification_mention:
   kind: 2
-  user: tanaka
+  user: sotugyou
   sender: komagata
   message: komagataさんからメンションがきました。
   path: "/reports/5"
@@ -24,7 +24,7 @@ notification_mention:
 
 notification_read:
   kind: 0
-  user: tanaka
+  user: sotugyou
   sender: machida
   message: machidaさんからコメントが届きました。
   path: "/reports/5"
