--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -17,7 +17,7 @@ comment_3:
     https://github.com/fjordllc/csstutorial/tree/master とかですかねー。
 
 comment_4:
-  user: sotugyou
+  user: tanaka
   commentable: report_4 (Report)
   description: |-
     ```ruby
@@ -32,7 +32,7 @@ comment_5:
     `Comment.where(report_id: @commentable.id)` じゃないと動かなくないですか？
 
 comment_6:
-  user: sotugyou
+  user: tanaka
   commentable: report_4 (Report)
   description: "失礼しました。 report_id を id と typo してました :sweat_drops:"
 
