--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -9,7 +9,7 @@ question_2:
   title: injectとreduce
   description: |-
     injectとreduceはどちらを使うのが一般的でしょうか？
-  user: sotugyou
+  user: tanaka
 
 question_3:
   title: テストの質問1
