--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -45,19 +45,19 @@ machida:
   updated_at: "2014-01-01 00:00:02"
   created_at: "2014-01-01 00:00:02"
 
-sotugyou:
-  login_name: sotugyou
-  email: sotugyou@example.com
+tanaka:
+  login_name: tanaka
+  email: tanaka@fjord.jp
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK. # testtest
   salt: zW3kQ9ubsxQQtzzzs4ap
-  first_name: 太郎
-  last_name: 卒業
-  twitter_account: sotugyou
-  facebook_url: http://www.facebook.com/sotugyou
-  blog_url: http://sotugyou.example.com/
-  feed_url: http://sotugyou.example.com/index.atom
+  first_name: Taro
+  last_name: Tanaka
+  twitter_account: tanaka
+  facebook_url: http://www.facebook.com/tanaka
+  blog_url: http://tanaka.com
+  feed_url: http://tanaka.com/index.atom
   company: company_1
-  description: "卒業です。卒業しちゃいました。"
+  description: "田中です。卒業しちゃいました。"
   course: course_1
   job: office_worker
   os: mac
