Q&Aのウォッチ機能のテストを書いた

--- a/test/fixtures/watches.yml
+++ b/test/fixtures/watches.yml
@@ -5,3 +5,7 @@ report1_watch_kimura:
 product1_watch_kimura:
   user: kimura
   watchable: product_1 (Product)
+
+question1_watch_kimura:
+  user: kimura
+  watchable: question_1 (Question)
