Markdownをサポートするテキストエリアに補完機能を追加
- [機能追加] @をタイプするとログイン名を補完
- [機能追加] :をタイプすると絵文字を補完
- [機能追加] Markdownの表示時に@ログイン名をリンクに変更
- [バグ修正] お知らせでコメントするとエラーになる問題を修正

注意

- プレビューは別ライブラリの機能のため、変更なし
- @ログイン名の補完やリンクは日本語や記号が含まれている場合、非サポート
- ログイン名や絵文字は全件取得しているため、パフォーマンスの問題があった場合は要調整

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "autosize": "^4.0.2",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^2.0.0",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -11,11 +13,13 @@
     "eslint-plugin-standard": "^4.0.0",
     "hotkeys-js": "^3.3.5",
     "markdown-it": "^8.4.2",
-    "markdown-it-plantuml": "^1.2.0",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-regexp": "^0.4.0",
     "pug": "^2.0.3",
     "select2": "^4.0.7-rc.0",
     "textarea-autosize": "^0.4.2",
     "textarea-markdown": "^1.2.3",
+    "tributejs": "^3.6.0",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
     "vue-template-compiler": "^2.5.16",
