--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -172,7 +172,8 @@ hatsuno:
   feed_url: http://hatsuno.org/index.atom
   company: company_1
   description: "初野です。課金しています。"
-  customer_id: "cus_XXXXXXXX"
+  customer_id: "cus_12345678"
+  subscription_id: "sub_12345678"
   course: course_1
   job: office_worker
   os: mac
