--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -191,6 +191,7 @@ hajime:
   salt: zW3kQ9ubsxQQtzzzs4ap
   first_name: Tayo
   last_name: Hajime
+  slack_account: hajime
   twitter_account: hajime
   facebook_url: http://www.facebook.com/hajime
   blog_url: http://hajime.org
@@ -214,6 +215,7 @@ muryou:
   salt: zW3kQ9ubsxQQtzzzs4ap
   first_name: Nosuke
   last_name: Muryou
+  slack_account: muryou
   twitter_account: muryou
   facebook_url: http://www.facebook.com/muryou
   blog_url: http://muryou.org
