--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "textarea-markdown": "^1.2.3",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
