--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,8 +69,7 @@ jobs:
       - run:
           name: Lint
           command: |
-            gem install slim_lint
-            slim-lint app/views -c config/slim_lint.yml
+            bundle exec slim-lint app/views -c config/slim_lint.yml
             bin/yarn eslint app/javascript
 
       - run:
