--- a/test/fixtures/watches.yml
+++ b/test/fixtures/watches.yml
@@ -1,3 +1,7 @@
 report1_watch_kimura:
   user: kimura
   watchable: report_1 (Report)
+
+question1_watch_kimura:
+  user: kimura
+  watchable: question_1 (Question)
