--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-regexp": "^0.4.0",
+    "moment": "^2.24.0",
     "pug": "^2.0.3",
     "select2": "^4.0.7-rc.0",
     "textarea-autosize": "^0.4.2",
