通知をメールでも飛ぶように変更
* 既存のNotificationクラスをInnerNotificationクラスに名前を変更
* サイト内通知と通知メールをまとめたNotificationクラスを作成
* NotificationMailerとメイラーのビュー作成
* メール通知のリンクから通知を既読にできるように作成

--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -45,3 +45,8 @@ comment_8:
   user: komagata
   commentable: product_10 (Product)
   description: "提出物のコメントです。"
+
+comment_9:
+  user: komagata
+  commentable: report_5 (Report)
+  description: "@sotugyou 🎉🎉🎉🎉"
