enumをRails標準のenumに変更
* simple_enumを削除
* status_cdカラムをstatusカラムに変更
* Rails標準のenumを使うように変更

--- a/test/fixtures/learnings.yml
+++ b/test/fixtures/learnings.yml
@@ -1,29 +1,29 @@
 learning_1:
   user: komagata
   practice: practice_1
-  status_cd: 0
+  status: "started"
 
 learning_2:
   user: komagata
   practice: practice_2
-  status_cd: 1
+  status: "complete"
 
 learning_3:
   user: komagata
   practice: practice_3
-  status_cd: 2
+  status: "not_complete"
 
 learning_4:
   user: machida
   practice: practice_2
-  status_cd: 1
+  status: "complete"
 
 learning_5:
   user: sotugyou
   practice: practice_2
-  status_cd: 1
+  status: "complete"
 
 learning_5:
   user: kimura
   practice: practice_1
-  status_cd: 1
+  status: "complete"
