--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,8 @@ AllCops:
     - 'app/views/**/*'
     - 'node_modules/**/*'
     - 'db/schema.rb'
+    - 'storage/**/*'
+    - 'tmp/**/*'
 
 Performance:
   Exclude:
