--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -230,7 +230,7 @@ kensyu:
   salt: zW3kQ9ubsxQQtzzzs4ap
   first_name: Seiko
   last_name: Kensyu
-  slack_account: kenshu
+  slack_account: kensyu
   github_account: kensyu
   twitter_account: kensyu
   facebook_url: http://www.facebook.com/kensyu
