--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -196,6 +196,7 @@ hajime:
   study_place: remote
   experience: inexperienced
   organization: 始大学
+  mail_notification: false
   updated_at: "2014-01-01 00:00:09"
   created_at: "2014-01-01 00:00:09"
 
