--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "hotkeys-js": "^3.3.5",
+    "lodash": "^4.17.13",
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-regexp": "^0.4.0",
