--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "hotkeys-js": "^3.3.5",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.13",
     "lodash.template": "^4.5.0",
     "markdown-it": "^8.4.2",
