--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-regexp": "^0.4.0",
+    "mem": "^4.0.0",
     "moment": "^2.24.0",
     "pug": "^2.0.3",
     "select2": "^4.0.7-rc.0",
