--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^3.1.11"
   }
 }
